[package]
name = "test_webhid"
version = "0.1.0"
authors = ["Jeffrey Brusseau <bobajeff82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.49"
wasm-bindgen = "0.2.72"
web-sys = "0.3.49"
